[package]
name = "pomeranian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
itertools = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
