[package]
name = "pomeranian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
indicatif = "0.17.8"
itertools = "0.12.1"
rand = "0.8.5"
rustbreak = { version = "2.0.0", features = ["ron_enc"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
