[package]
name = "pomeranian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
color-rs = "0.8.0"
crossterm = "0.27.0"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
itertools = "0.12.1"
notify-rust = { version = "4.11.0", default-features = false, features = ["zbus", "serde"] }
rand = "0.8.5"
ratatui = "0.26.1"
rustbreak = { version = "2.0.0", features = ["ron_enc"] }
serde = { version = "1.0.197", features = ["derive", "rc"] }
